--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.eyssyapps.bluetoothcommandsender"
+        applicationId "com.eyssyapps.utilities_suite"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.7'
+    compile "me.leolin:ShortcutBadger:1.1.10@aar"
 }
