--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.eyssyapps.utilities_suite"
+        applicationId "com.zagorapps.utilities_suite"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
