--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.eyssyapps.utilities_suite"
+<manifest package="com.zagorapps.utilities_suite"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.eyssyapps.utilities_suite.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,22 +22,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.eyssyapps.utilities_suite.activities.deviceinteraction.DeviceInteractionActivity"
+            android:name=".activities.deviceinteraction.DeviceInteractionActivity"
             android:label="@string/title_activity_device_interaction"
-            android:parentActivityName="com.eyssyapps.utilities_suite.activities.MainActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.eyssyapps.utilities_suite.activities.MainActivity"/>
+                android:value=".activities.MainActivity"/>
         </activity>
         <activity
-            android:name="com.eyssyapps.utilities_suite.activities.deviceinteraction.InteractionSettingsActivity"
+            android:name=".activities.deviceinteraction.InteractionSettingsActivity"
             android:label="@string/title_activity_interaction_settings"
-            android:parentActivityName="com.eyssyapps.utilities_suite.activities.deviceinteraction.DeviceInteractionActivity"
+            android:parentActivityName=".activities.deviceinteraction.DeviceInteractionActivity"
             android:theme="@style/Theme.AppCompat.Dialog.Alert">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.eyssyapps.utilities_suite.activities.deviceinteraction.DeviceInteractionActivity"/>
+                android:value=".activities.deviceinteraction.DeviceInteractionActivity"/>
         </activity>
     </application>
 
