--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.7'
     compile "me.leolin:ShortcutBadger:1.1.10@aar"
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
 }
