--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'joda-time:joda-time:2.9.4'
     compile 'com.google.code.gson:gson:2.7'
     compile "me.leolin:ShortcutBadger:1.1.10@aar"
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
