Creating a Service that holds the server connection socket; Allowing activities to bind and unbind that require access to this service; Beginning renaming of some classes that gave the notion of them being specifically for Bluetooth connection which will not be the case later on as there is scope to introduce TCP/UDP connections too; ClipboardManagerActivity now is able to send selected items to the server.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </receiver>
 
         <service android:name=".services.persistent.ClipboardManagerListenerService" />
+        <service android:name=".services.net.ServerConnectionService" />
 
         <activity
             android:name=".activities.MainActivity"
