--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -24,8 +25,9 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".services.persistent.ClipboardManagerListenerService" />
+        <service android:name=".services.persistence.ClipboardManagerListenerService" />
         <service android:name=".services.net.ServerConnectionService" />
+        <service android:name=".services.ConnectionActiveHeadService" />
 
         <activity
             android:name=".activities.MainActivity"
@@ -41,6 +43,7 @@
             android:name=".activities.deviceinteraction.DeviceInteractionActivity"
             android:label="@string/title_activity_device_interaction"
             android:parentActivityName=".activities.MainActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
