--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
+        android:name=".UtilitiesSuiteApplication"
         android:allowBackup="true"
         android:icon="@drawable/connection_64dp"
         android:label="@string/app_name"
@@ -25,9 +27,9 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".services.persistence.ClipboardManagerListenerService" />
-        <service android:name=".services.net.ServerConnectionService" />
-        <service android:name=".services.ConnectionActiveHeadService" />
+        <service android:name=".services.persistence.ClipboardService" />
+        <service android:name=".services.net.ConnectionService" />
+        <service android:name=".services.HeadConnectionService" />
 
         <activity
             android:name=".activities.MainActivity"
@@ -38,6 +40,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.nononsenseapps.filepicker.FilePickerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/FilePickerTheme">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.GET_CONTENT" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
             android:name=".activities.deviceinteraction.DeviceInteractionActivity"
@@ -85,6 +96,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.zagorapps.utilities_suite.activities.deviceinteraction.DeviceInteractionActivity"/>
         </activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/nnf_provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
